# test_camera

./: CMakeLists.txt  cameradbusinterface.cpp  cameradbusinterface.h  complexdbusobject.cpp  complexdbusobject.h  datastructs.h  dbusClient.cpp  dbusClient.h  icamera.cpp  icamera.h  logger.h  main.cpp  rtspcamera.cpp  rtspcamera.h
